infra/kubernetes/hive-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-service
  namespace: hive
  labels:
    app: hive
spec:
  selector:
    app: hive
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
  type: ClusterIP
